--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
   "main": "app/main.js",
   "build": {
     "appId": "com.example.electron-boilerplate",
+    "directories": {
+      "buildResources": "resources"
+    },
     "files": [
       "app/**/*",
       "node_modules/**/*",
       "package.json"
     ],
-    "directories": {
-      "buildResources": "resources"
-    },
+    "extraFiles": [
+      {
+        "from": "resources",
+        "to": "resources",
+        "filter": [
+          "**/*"
+        ]
+      }    
+    ],
     "publish": null
   },
   "scripts": {
